--- a/app/src/main/res/layout/fragment_control.xml
+++ b/app/src/main/res/layout/fragment_control.xml
@@ -68,7 +68,7 @@
     </LinearLayout>
 
 
-        <cn.iscas.xlab.xbotplayer.RockerView
+        <cn.iscas.xlab.xbotplayer.customview.RockerView
             android:id="@+id/rocker_view"
             android:layout_width="180dp"
             android:layout_height="180dp"
