--- a/app/src/main/res/drawable/rocker_unavailable.xml
+++ b/app/src/main/res/drawable/rocker_unavailable.xml
@@ -14,12 +14,21 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<resources>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
 
-    <declare-styleable name="RockerView">
-        <attr name="areaBackground" format="reference|color"/>
-        <attr name="rockerBackground" format="reference|color" />
-        <attr name="rockerRadius" format="dimension" />
-        <attr name="unavailableDrawable" format="reference|color" />
-    </declare-styleable>
-</resources>
+    <gradient
+        android:type="radial"
+        android:gradientRadius="20dp"
+        android:endColor="#757575"
+        android:startColor="#bdbdbd"
+        />
+
+    <stroke
+        android:width="1dp"
+        android:color="#ff666666" />
+
+    <size android:width="30dp"
+        android:height="30dp"/>
+
+</shape>
