--- a/app/src/main/res/layout-xlarge/fragment_map.xml
+++ b/app/src/main/res/layout-xlarge/fragment_map.xml
@@ -11,8 +11,9 @@
         <cn.iscas.xlab.xbotplayer.customview.MapView
             android:id="@+id/map_view"
             android:layout_centerHorizontal="true"
-            android:layout_width="300dp"
-            android:layout_height="300dp" />
+            android:layout_marginTop="5dp"
+            android:layout_width="600dp"
+            android:layout_height="600dp" />
 
         <LinearLayout
             android:id="@+id/linear_layout"
@@ -41,16 +42,16 @@
 
         <cn.iscas.xlab.xbotplayer.customview.RockerView
             android:id="@+id/rocker_view"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginBottom="10dp"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginBottom="30dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             app:areaBackground="@drawable/default_background"
             app:rockerBackground="@drawable/default_rocker"
             app:unavailableDrawable="@drawable/rocker_unavailable"
-            app:rockerRadius="25dp"
+            app:rockerRadius="30dp"
             />
     </RelativeLayout>
 </android.support.v4.widget.SwipeRefreshLayout>
