--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,12 +4,7 @@
     <item
         android:id="@+id/controller"
         android:icon="@drawable/rocker"
-        android:title="遥控" />
-
-    <item
-        android:id="@+id/map"
-        android:icon="@drawable/map"
-        android:title="地图" />
+        android:title="控制界面" />
 
     <item
         android:id="@+id/camera"
