--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -17,6 +17,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/xbot_state"
+        android:icon="@drawable/xbot"
+        android:title="xbot状态" />
+
+    <item
         android:id="@+id/controller"
         android:icon="@drawable/rocker"
         android:title="控制界面" />
