--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -17,8 +17,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/xbot_state"
-        android:icon="@drawable/xbot"
+        android:id="@+id/robot_state"
+        android:icon="@drawable/robot"
         android:title="xbot状态" />
 
     <item
