--- a/app/src/main/res/drawable/actionbar_bg.xml
+++ b/app/src/main/res/drawable/actionbar_bg.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:startColor="#2af598"
-        android:endColor="#009efd"
+        android:startColor="#08244c"
+        android:endColor="#093166"
         android:type="linear" />
 
 
