--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="MainPage"
+            android:textColor="@android:color/white"
             android:gravity="center"
             />
 
@@ -51,7 +51,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="10dp"
             android:layout_centerVertical="true"
-            android:background="@drawable/icon_setting"/>
+            android:background="@drawable/icon_setting_white"/>
     </RelativeLayout>
 
     <FrameLayout
