--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,8 @@
 <resources>
     <!--<color name="colorPrimary">#9C27B0</color>-->
     <!--<color name="colorPrimaryDark">#7B1FA2</color>-->
+    <color name="colorPrimary">#51CEE2</color>
+    <color name="colorPrimaryDark">#4185EA</color>
     <color name="primary_light">#E1BEE7</color>
     <color name="colorAccent">#536DFE</color>
     <color name="primary_text">#212121</color>
@@ -24,6 +26,7 @@
     <color name="icons">#FFFFFF</color>
     <color name="divider">#BDBDBD</color>
 
-    <color name="colorPrimary">#48c6ef</color>
-    <color name="colorPrimaryDark">#4185EA</color>
+    <color name="colorLightPink">#E968A1</color>
+
+    <color name="colorStatePageText">#333333</color>
 </resources>
