--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,4 +34,9 @@
 
     </style>
 
+    <style name="SwitcherTheme" parent="Theme.AppCompat.Light">
+
+        <item name="colorControlActivated">@color/colorPrimary</item>
+    </style>
+
 </resources>
