--- a/app/src/main/res/layout-xlarge/fragment_robot_state.xml
+++ b/app/src/main/res/layout-xlarge/fragment_robot_state.xml
@@ -3,33 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    >
 
     <cn.iscas.xlab.xbotplayer.customview.PercentCircleView
         android:id="@+id/battery_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        app:radius="80dp"
-        app:normal_state_color="#7cb342"
+        android:background="@drawable/background"
+        android:padding="20dp"
+        app:radius="100dp"
+        app:normal_state_color="@color/colorPrimary"
         app:mid_state_color="#ff8f00"
-        app:low_state_color="#b71c1c"
-        app:stroke_size="2dp"
-        app:stroke_color="#00bcd4"
+        app:low_state_color="#c62828"
+        app:stroke_size="3dp"
+        app:stroke_color="@color/colorPrimary"
         app:text_size="30sp"
-        app:text_color="#ab47bc"/>
-
-
-    <TextView
-        android:id="@+id/battery_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/battery_view"
-        android:text="电量"
-        android:layout_margin="5dp"
-        android:textSize="25sp"
-        android:textColor="@color/colorPrimary"
+        app:text_color="@android:color/white"
         />
 
     <View
@@ -38,62 +28,35 @@
         android:layout_height="1dp"
         android:background="#eeeeee"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/battery_txt"/>
+        android:layout_below="@id/battery_view"/>
 
-    <Button
-        android:id="@+id/bt1"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/layout_item1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#ffffff"
-        android:alpha="30"
-        android:layout_alignParentEnd="true"
-        android:text="+6"/>
-
-    <Button
-        android:id="@+id/bt2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#ffffff"
-        android:alpha="30"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@id/bt1"
-        android:text="-6"/>
-
-    <cn.iscas.xlab.xbotplayer.customview.CustomSeekBar
-        android:id="@+id/seekbar_cloud_degree"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
         android:layout_below="@id/divider1"
-        android:layout_margin="5dp"
-        android:layout_centerHorizontal="true"
-        app:is_horizontal="true"
-        app:track_length="400dp"
-        app:track_width="8dp"
-        app:track_color="@android:color/holo_green_light"
-        app:indicator_radius="13dp"
-        app:indicator_color="@color/colorAccent"
-        app:bubble_color="@android:color/holo_blue_light"
-        app:bubble_height="35dp"
-        app:bubble_width="60dp"
-        app:bubble_text_size="20sp"
-        app:bubble_text_color="@android:color/holo_red_light"
-        app:min_value="-90"
-        app:max_value="90"
-        app:value_text_size="20sp"
-        app:value_text_color="@color/colorPrimary"/>
-
-    <TextView
-        android:id="@+id/cloud_degree_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/seekbar_cloud_degree"
-        android:text="云台角度"
-        android:layout_marginBottom="20dp"
-        android:textSize="20sp"
-        android:textColor="@color/colorPrimary"
-        />
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
+        android:paddingStart="70dp"
+        >
+        <TextView
+            android:id="@+id/electric_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textColor="@color/colorStatePageText"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="20dp"
+            android:text="电机电源"/>
+        <Switch
+            android:id="@+id/switcher"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/electric_text"
+            android:theme="@style/SwitcherTheme"
+            android:checked="true"
+            />
+    </RelativeLayout>
 
     <View
         android:id="@+id/divider2"
@@ -101,7 +64,58 @@
         android:layout_height="1dp"
         android:background="#eeeeee"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/cloud_degree_txt"/>
+        android:layout_below="@id/layout_item1"/>
+
+    <RelativeLayout
+        android:id="@+id/layout_item2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/divider2"
+        android:paddingStart="70dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="30dp"
+        >
+
+        <TextView
+            android:id="@+id/cloud_degree_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="云台角度"
+            android:layout_centerVertical="true"
+            android:textSize="20sp"
+            android:textColor="@color/colorStatePageText"
+            />
+
+        <cn.iscas.xlab.xbotplayer.customview.CustomSeekBar
+            android:id="@+id/seekbar_cloud_degree"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/cloud_degree_txt"
+            app:is_horizontal="true"
+            app:track_length="400dp"
+            app:track_width="8dp"
+            app:track_color="@color/colorPrimary"
+            app:indicator_radius="13dp"
+            app:indicator_color="@color/colorLightPink"
+            app:bubble_color="@color/colorPrimary"
+            app:bubble_height="40dp"
+            app:bubble_width="60dp"
+            app:bubble_text_size="20sp"
+            app:bubble_text_color="@color/colorLightPink"
+            app:min_value="-90"
+            app:max_value="90"
+            app:value_text_size="20sp"
+            app:value_text_color="@color/colorStatePageText"/>
+    </RelativeLayout>
+
+
+    <View
+        android:id="@+id/divider3"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#eeeeee"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/layout_item2"/>
 
     <LinearLayout
         android:id="@+id/linear_layout"
@@ -109,33 +123,34 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:orientation="horizontal"
-        android:layout_below="@id/divider2">
+        android:layout_below="@id/divider3"
+        android:layout_marginTop="20dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginEnd="110dp">
             <cn.iscas.xlab.xbotplayer.customview.CustomSeekBar
                 android:id="@+id/seekbar_lift_height"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_margin="20dp"
                 app:is_horizontal="false"
                 app:track_length="300dp"
                 app:track_width="8dp"
-                app:track_color="@android:color/holo_orange_light"
+                app:track_color="@color/colorPrimary"
                 app:indicator_radius="13dp"
-                app:indicator_color="@color/colorAccent"
-                app:bubble_color="@android:color/holo_blue_light"
-                app:bubble_height="35dp"
+                app:indicator_color="@color/colorLightPink"
+                app:bubble_color="@color/colorPrimary"
+                app:bubble_height="40dp"
                 app:bubble_width="60dp"
                 app:bubble_text_size="20sp"
-                app:bubble_text_color="@android:color/holo_red_light"
+                app:bubble_text_color="@color/colorLightPink"
                 app:min_value="0"
                 app:max_value="100"
                 app:value_text_size="20sp"
-                app:value_text_color="@color/colorPrimary"/>
+                app:value_text_color="@color/colorStatePageText"/>
             <TextView
                 android:id="@+id/lift_height_txt"
                 android:layout_width="wrap_content"
@@ -143,7 +158,7 @@
                 android:text="升降台高度"
                 android:layout_gravity="center_horizontal"
                 android:textSize="20sp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorStatePageText"
                 />
         </LinearLayout>
 
@@ -153,26 +168,25 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <cn.iscas.xlab.xbotplayer.customview.CustomSeekBar
-                android:id="@+id/seekbar_cemera_degree"
+                android:id="@+id/seekbar_camera_degree"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_margin="20dp"
                 app:is_horizontal="false"
                 app:track_length="300dp"
                 app:track_width="8dp"
-                app:track_color="@android:color/holo_orange_light"
+                app:track_color="@color/colorPrimary"
                 app:indicator_radius="13dp"
-                app:indicator_color="@color/colorAccent"
-                app:bubble_color="@android:color/holo_blue_light"
-                app:bubble_height="35dp"
+                app:indicator_color="@color/colorLightPink"
+                app:bubble_color="@color/colorPrimary"
+                app:bubble_height="40dp"
                 app:bubble_width="60dp"
                 app:bubble_text_size="20sp"
-                app:bubble_text_color="@android:color/holo_red_light"
+                app:bubble_text_color="@color/colorLightPink"
                 app:min_value="-45"
                 app:max_value="45"
                 app:value_text_size="20sp"
-                app:value_text_color="@color/colorPrimary"/>
+                app:value_text_color="@color/colorStatePageText"/>
             <TextView
                 android:id="@+id/camera_degree_txt"
                 android:layout_width="wrap_content"
@@ -180,11 +194,10 @@
                 android:layout_gravity="center_horizontal"
                 android:text="摄像头角度"
                 android:textSize="20sp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorStatePageText"
                 />
         </LinearLayout>
 
     </LinearLayout>
-
 
 </RelativeLayout>
