--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,14 +60,13 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         >
-
     </FrameLayout>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#ffe57f"
+        android:background="#fff"
         app:menu="@menu/menu_main"
         >
     </android.support.design.widget.BottomNavigationView>
