--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -11,6 +11,7 @@
         <cn.iscas.xlab.xbotplayer.customview.MapView
             android:id="@+id/map_view"
             android:layout_centerHorizontal="true"
+            android:layout_marginTop="2dp"
             android:layout_width="300dp"
             android:layout_height="300dp" />
 
